# uni-compare

./: .gitignore  README.md  pyproject.toml
src/unic/: __main__.py
