[project]
name = "unic"
version = "1.1.0"
description = "A simple program to help university students manage their coursework. Given 2 executable files, it will run them and compare their outputs with the given input file/s."
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "colorama>=0.4.6",
    "pyfiglet>=0.8.post1",
]

[project.scripts]
unic = "unic:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
